.provarCaches/00D410000011HE0EAM/objects/rstkf__armemo__c.object
<CustomObject>
    <description>armemo__c</description>
    <fields>
        <fullName>rstkf__armemo_arinvtxn__c</fullName>
        <label>Receivable Transaction</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipLabel>AR Memo Prints</relationshipLabel>
        <relationshipName>armemos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__armemo_isfinchg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is This for a Finance Charge?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__armemo_lastpprinted__c</fullName>
        <label>Last Printed Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__armemo_printed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Memo Has Been Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__armemo_text__c</fullName>
        <label>Memo Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__armemo_arinvtxn__r.rstkf__externalid__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__armemo_arinvtxn__r.Name</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AR Memo Print</label>
    <listViews>
        <fullName>rstkf__RS_AR_Memo_Prints</fullName>
        <columns>NAME</columns>
        <columns>rstkf__armemo_arinvtxn__c</columns>
        <columns>rstkf__armemo_text__c</columns>
        <columns>rstkf__armemo_isfinchg__c</columns>
        <columns>rstkf__armemo_lastpprinted__c</columns>
        <columns>rstkf__armemo_printed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Memo Print</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_AR_Memo_Prints_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__armemo_arinvtxn__c</columns>
        <columns>rstkf__armemo_text__c</columns>
        <columns>rstkf__armemo_isfinchg__c</columns>
        <columns>rstkf__armemo_lastpprinted__c</columns>
        <columns>rstkf__armemo_printed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Memo Print - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Memo Prints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>